[project]
name = "vidxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "pymupdf>=1.23.0",
    "gtts>=2.5.4",
    "langchain>=0.3.26",
    "moviepy>=1.0.3",
    "streamlit>=1.46.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "langchain-google-genai>=2.1.5",
    "pydub>=0.25.1",
]
